src/tests/negative-suites/templates.nts
#############################################################################
# reference unknown template
expand UndefinedTemplate()
?SymbolNotDefined, 3, 8

#############################################################################
# nested templates
template TOuter() {
    template TInner() { }
}
?CannotNestTemplates, 5, 5

#############################################################################
# too few template arguments
template TTemplate(T, TT) { }
expand TTemplate(int)
?IncorrectNumberOfTemplateArguments, 5, 1

#############################################################################
# too many template arguments
template TTemplate(T, TT) { }
expand TTemplate(int, float, bool)
?IncorrectNumberOfTemplateArguments, 5, 1

#############################################################################
# can't reference class within non-expanded template
template Temp(T) {
    class S { }
}
a:S
?SymbolNotDefined, 7, 3

#############################################################################
# can't reference function within non-expanded template
template Temp(T) {
    func foo:void() 1
}
foo()
?SymbolNotDefined, 7, 1

#############################################################################
# can't reference variable within non-expanded template
template Temp(T) {
    f:int = 1
}
f
?SymbolNotDefined, 7, 1

#############################################################################
# circular template reference (1 template)
template TFoo() {
    expand TFoo()
}
expand TFoo()
?CircularTemplateReference, 5, 5

#############################################################################
# circular template references (2 templates)
template TFoo() {
    expand TBar()
}
template TBar() {
    expand TFoo()
}
expand TFoo()
?CircularTemplateReference, 8, 5

#############################################################################
# circular template references (3 templates)
template TFoo() {
    expand TBar()
}
template TBar() {
    expand TBat()
}
template TBat() {
    expand TBar()
}
expand TFoo()
?CircularTemplateReference, 11, 5

#############################################################################
# attempt to expand a symbol that is not a template
notATemplate:int
expand notATemplate()
?SymbolIsNotATemplate, 5, 8
